--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = "1.0.114"
 config = "0.14.0"
 serde = "1.0.197"
 log = "0.4.21"
+serde_yaml = "0.9.33"
 
 [dev-dependencies]
 env_logger = "0.11.3"
