make found events green

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde = "1.0.197"
 log = "0.4.21"
 serde_yaml = "0.9.33"
 chrono = "0.4.35"
+colored = "2.1.0"
 
 [dev-dependencies]
 env_logger = "0.11.3"
