--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ radix-client = { git = "https://github.com/ociswap/radix-client", branch = "init
     "gateway",
 ] }
 
-event_name_derive = { path = "./event_name_derive" }
+event_handler = { path = "./event_handler" }
 
 serde_json = "1.0.114"
 config = "0.14.0"
@@ -28,10 +28,11 @@ log = "0.4.21"
 serde_yaml = "0.9.33"
 chrono = "0.4.35"
 colored = "2.1.0"
+dyn-clone = "1.0.17"
 
 [dev-dependencies]
 env_logger = "0.11.3"
 
 
 [workspace]
-members = ["event_name_derive"]
+members = ["event_handler"]
