--- a/event_handler/Cargo.toml
+++ b/event_handler/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "event_name_derive"
+name = "event_handler"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,6 +9,6 @@ proc-macro = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-syn = { version = "1.0", features = ["derive"] }
+syn = { version = "1.0", features = ["full"] }
 quote = "1.0"
 proc-macro2 = "1.0"
