--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,8 @@ dyn-clone = "1.0.17"
 
 [dev-dependencies]
 env_logger = "0.11.3"
+tokio = { version = "1.36.0", features = ["full"] }
+sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
 
 
 [workspace]
