--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde_yaml = "0.9.33"
 chrono = "0.4.35"
 colored = "2.1.0"
 dyn-clone = "1.0.17"
+anyhow = "1.0.81"
 
 [dev-dependencies]
 env_logger = "0.11.3"
