--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ chrono = "0.4.35"
 colored = "2.1.0"
 dyn-clone = "1.0.17"
 anyhow = "1.0.81"
+async-trait = "0.1.79"
+futures = "0.3.30"
 
 [dev-dependencies]
 env_logger = "0.11.3"
