--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ chrono = "0.4.35"
 colored = "2.1.0"
 dyn-clone = "1.0.17"
 anyhow = "1.0.81"
+async-trait = "0.1.79"
 
 [dev-dependencies]
 env_logger = "0.11.3"
@@ -38,4 +39,4 @@ sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
 
 
 [workspace]
-members = ["event_handler"]
+members = [ "asynctest","event_handler"]
