use only gateway feature of radix client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,9 @@ radix-engine-common = { git = "https://github.com/radixdlt/radixdlt-scrypto", re
 sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "038ddee8b0f57aa90e36375c69946c4eb634efeb", features = [
     "serde",
 ] }
-radix-client = { git = "https://github.com/ociswap/radix-client", branch = "improve-builder-design" }
+radix-client = { git = "https://github.com/ociswap/radix-client", branch = "improve-builder-design", features = [
+    "gateway",
+] }
 
 handler_macro = { path = "./handler_macro" }
 
