--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,15 +17,14 @@ sbor = { git = "https://github.com/radixdlt/radixdlt-scrypto", rev = "038ddee8b0
 ] }
 radix-client = { git = "https://github.com/ociswap/radix-client", branch = "improve-builder-design", features = [
     "gateway",
-] }
+], optional = true }
 
 handler_macro = { path = "./handler_macro" }
 
 serde_json = "1.0.114"
-config = "0.14.0"
 serde = "1.0.197"
 log = "0.4.21"
-serde_yaml = "0.9.33"
+serde_yaml = { version = "0.9.33", optional = true }
 chrono = "0.4.35"
 colored = "2.1.0"
 dyn-clone = "1.0.17"
@@ -34,12 +33,19 @@ async-trait = "0.1.79"
 tokio = { version = "1.37.0", features = ["full"] }
 sqlx = { version = "0.7.4", features = [
     "postgres",
-    "sqlite",
     "time",
     "runtime-tokio",
     "chrono",
-] }
+], optional = true }
+
+[features]
+default = ["gateway", "file", "database", "channel"]
+database = ["sqlx"]
+gateway = ["radix-client"]
+file = ["serde_yaml"]
+channel = []
 
 
 [dev-dependencies]
+sqlx = { version = "0.7.4", features = ["sqlite"] }
 env_logger = "0.11.3"
