make clippy even happier and add some more metadata to cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "radix-event-stream"
 version = "1.0.0"
 edition = "2021"
+license-file = "LICENSE"
+repository = "https://github.com/ociswap/radix-event-stream"
 
 
 [dependencies]
