--- a/crates/radix-event-stream/Cargo.toml
+++ b/crates/radix-event-stream/Cargo.toml
@@ -4,14 +4,11 @@ version = "1.1.1"
 edition = "2021"
 
 [dependencies]
-# We link to a temporary RET fix here as there is currently a bug with decoding gateway events.
-# https://discord.com/channels/417762285172555786/765994894749597697/1225814514717560872
-# Should be removed once they release a new version.
 radix-common = { workspace = true }
 sbor = { workspace = true }
 radix-engine-interface = { workspace = true }
 radix-engine = { workspace = true }
-radix-engine-toolkit = { workspace = true }
+sbor-json = { workspace = true }
 radix-client = { git = "https://github.com/ociswap/radix-client", features = [
     "gateway",
 ], optional = true, tag = "v1.0.1" }
@@ -34,6 +31,7 @@ sqlx = { version = "0.7.4", features = [
     "runtime-tokio",
     "chrono",
 ], optional = true }
+serde_with = "3.9.0"
 
 [features]
 default = ["gateway", "file", "database", "channel"]
