--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ members = [
 ]
 resolver = "2"
 license-file = "LICENSE"
+package.version = "0.1.0"
+package.edition = "2021"
+package.license-file = "LICENSE"
+package.repository = "https://github.com/ociswap/radix-event-stream"
 
 
 [workspace.dependencies]
