--- a/crates/handler-macro/Cargo.toml
+++ b/crates/handler-macro/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "handler-macro"
-version = "1.1.1"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+license-file.workspace = true
+repository.workspace = true
 
 [lib]
 proc-macro = true
