--- a/crates/radix-event-stream/Cargo.toml
+++ b/crates/radix-event-stream/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "radix-event-stream"
-version = "1.1.1"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+license-file.workspace = true
+repository.workspace = true
 
 [dependencies]
 radix-common = { workspace = true }
