--- a/radix-event-stream/Cargo.toml
+++ b/radix-event-stream/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 license-file.workspace = true
 repository.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 radix-common = { workspace = true }
