--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -15,3 +15,4 @@ sqlx = { version = "0.7.4", features = ["sqlite"] }
 env_logger = "0.11.3"
 log = "0.4.21"
 tokio = { version = "1.37.0", features = ["full"] }
+chrono = "0.4.19"
